# Mean-Reversion-Trend-Analysis

C++/: CMakeLists.txt  DataFrame.cpp  DataFrame.h  Directional_Signal_Generator.cpp  Directional_Signal_Generator.h  Directional_Strategy_Manager.cpp  Directional_Strategy_Manager.h  Drawdown_Sorting_Pairs.cpp  MDev_Pairs.h  MDiff_Pairs.h  Numerical_Solver.cpp  Numerical_Solver.h  PDev_Pairs.cpp  PDiff_Pairs.h  PRDev_Pairs.cpp  PRDev_Pairs.h  PRDiff_Pairs.h  Pnl_Sorting_Pairs.cpp  Pnl_Sorting_Pairs.h  Sorting_Pairs.cpp  Sorting_Pairs.h  Strategy_Simulator.cpp  Strategy_Simulator.h  TS3_Pairs.h  Utilities.cpp  Utilities.h  main.cpp
CFiles/: Config.py  NBN.ipynb  Push_To_DB.ipynb  Untitled.ipynb
Guide_Sim_C++/: BS.h  CMakeLists.txt  Directional_Signal_Generator.cpp  Drawdown_Sorting_Pairs.h  MDev_Pairs.cpp  MDiff_Pairs.cpp  Mongo_Adapter.cpp  Mongo_Adapter.h  Numerical_Solver.cpp  PDev_Pairs.h  PDiff_Pairs.cpp  PRDiff_Pairs.cpp  Strategy_Simulator.cpp  TS1_Pairs.cpp  TS1_Pairs.h  TS2_Pairs.cpp  TS2_Pairs.h  TS3_Pairs.cpp  Utilities.h  main.cpp
Rough/: Strategy.ipynb  Strategy_Expiry.ipynb  Test.xlsx
Strategy_FIles/: API_Wrapper.ipynb  API_Wrapper.py  BS.ipynb  BS.py  Classification_Engine.ipynb  Cluster_Classifier.ipynb  Config.py  Days_To_Expiry.ipynb  Directional_Signal_Generator.ipynb  Directional_Signal_Generator.py  Directional_Signal_Strategizer.ipynb  Directional_Signal_Strategizer.py  Directional_Strategy_Manager.ipynb  Directional_Strategy_Manager.py  Execution_Engine.ipynb  Gap_Move_Fut_Classifier.ipynb  Gap_Move_Live_Command.ipynb  Instrument.ipynb  (+26 more)
(+7 files in other folders)
